# hoverbois

./: .gitignore  .gitmodules  Makefile  README.md
controller/: controller_abc.py  web_controller.html  web_controller.py
discord/: README.md  bot.py  hoverbot@.service  setup-env.sh
driver/: pi_pwm_simple.py
firmware/4button_rc_fan/: 4button_rc_fan.ino
firmware/PWM_Basic_test1/: PWM_Basic_test1.ino
hoverbotpy/: Makefile  README.md  bot.py  driver_dummy.py  pin_defs.py  pyproject.toml  requirements.txt  setup-env.sh
hoverbotpy/src/hoverbotpy/controllers/: bluetooth_controller.py  cli_controller.py  controller_abc.py  rotation_correction.py  web_controller.html  web_controller.py  web_controller_simple.py
hoverbotpy/src/hoverbotpy/drivers/: driver_dummy.py  imu_driver.py  pi_fan_simple.py  pi_pico_pid.py  pi_pico_simple.py  pi_pwm_simple.py  pin_defs.py  threading_dummy.py  web_controller.html
hoverbotpy/src/hoverbotpy/hoverbot_discord/: bot.py
hoverbotpy/src/hoverbotpy/user_interface/: robot_gui.py
software/: controller_cli.py
software/controller/: web_controller.html  web_controller.py
software/discord/: bot.py  botkey_template.py
software/driver/: driver_abc.py  pi_fan_simple.py  pi_pico_simple.py  pi_pwm_simple.py  pin_defs.py  web_controller.html  web_controller_simple.py
systemd/: README.md  hoverbot@.service
website/: README.md  config.toml
website/assets/images/: IMG_1025.MOV  IMG_1420.MOV
website/content/: _index.md
website/content/docs/about/: _index.md
website/content/docs/budget/: _index.md
website/content/docs/electrical/: _index.md
website/content/docs/gallery/: _index.md
website/content/docs/mechanical/: _index.md
website/content/docs/process/: _index.md
website/content/docs/software/: _index.md
website/layouts/shortcodes/: bio.html  img.html
