[tool.poetry]
name = "hoverbotpy"
version = "0.1.0"
description = "Package for hovercraft PIE project."
authors = ["Devlin Ih <dih@olin.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
discord-py = "^2.0.1"
tornado = "^6.2"
numpy = "^1.23.4"
pyserial = "^3.5"
pygame = "^2.1.2"
requests = "^2.28.1"
evdev = {version="^1.6.0", optional=true}
gpiozero = {version="^1.6.2", optional=true}
rpi-gpio = {version="^0.7.1", optional=true}
lgpio = {version="^0.0.0.2", optional=true}
pigpio = {version="^1.78", optional=true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hoverbot-discord = "hoverbotpy.hoverbot_discord.bot:main"
web-controller-simple = "hoverbotpy.controllers.web_controller_simple:main"
robot-gui = "hoverbotpy.user_interface.robot_gui:main"
bluetooth-controller = "hoverbotpy.controllers.bluetooth_controller:main"
lora-cli = "hoverbotpy.controllers.cli_controller:main"
